--- a/rostem-client/package.json
+++ b/rostem-client/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
+    "@material-ui/core": "^4.0.0-rc.0",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/styles": "^4.0.0-beta.2",
     "@types/material-ui": "^0.21.6",
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
