--- a/ROSTEM/src/main/resources/application.properties
+++ b/ROSTEM/src/main/resources/application.properties
@@ -4,7 +4,7 @@ db.password = 1234
 db.generateDDL = true
 db.driver_class=org.postgresql.Driver
 
-server.servlet.context-path=/rostem
+server.servlet.context-path=/
 
 server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.secure=false
