--- a/ROSTEM/src/main/resources/application.properties
+++ b/ROSTEM/src/main/resources/application.properties
@@ -8,3 +8,5 @@ server.servlet.context-path=/
 
 server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.secure=false
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
