--- a/rostem-client/package.json
+++ b/rostem-client/package.json
@@ -8,9 +8,13 @@
     "@material-ui/styles": "^4.0.0-beta.2",
     "@types/material-ui": "^0.21.6",
     "axios": "^0.18.0",
+    "canvasjs": "^1.8.1",
+    "chartist": "^0.11.2",
     "classnames": "^2.2.6",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-canvas-js": "^1.0.1",
+    "react-chartist": "^0.13.3",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
