--- a/ROSTEM/src/main/resources/application.properties
+++ b/ROSTEM/src/main/resources/application.properties
@@ -6,7 +6,7 @@ db.driver_class=org.postgresql.Driver
 
 server.servlet.context-path=/
 
-server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.http-only=false
 server.servlet.session.cookie.secure=false
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
