--- a/rostem-client/package.json
+++ b/rostem-client/package.json
@@ -11,6 +11,7 @@
     "canvasjs": "^1.8.1",
     "chartist": "^0.11.2",
     "classnames": "^2.2.6",
+    "material-table": "^1.39.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-canvas-js": "^1.0.1",
