--- a/rostem-client/package.json
+++ b/rostem-client/package.json
@@ -11,6 +11,7 @@
     "canvasjs": "^1.8.1",
     "chartist": "^0.11.2",
     "classnames": "^2.2.6",
+    "crypto-js": "^3.1.9-1",
     "material-table": "^1.39.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
@@ -19,7 +20,9 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
-    "react-swipeable-views": "^0.13.1"
+    "react-swipeable-views": "^0.13.1",
+    "secure-web-storage": "^1.0.2",
+    "universal-cookie": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
