--- a/rostem-client/package.json
+++ b/rostem-client/package.json
@@ -12,12 +12,18 @@
     "chartist": "^0.11.2",
     "classnames": "^2.2.6",
     "crypto-js": "^3.1.9-1",
+    "draft-js": "^0.10.5",
+    "draftjs-to-html": "^0.8.4",
+    "html-to-draftjs": "^1.4.0",
     "material-table": "^1.39.0",
+    "nib-core": "^0.3.2",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-canvas-js": "^1.0.1",
     "react-chartist": "^0.13.3",
     "react-dom": "^16.8.6",
+    "react-draft-wysiwyg": "^1.13.2",
+    "react-html-parser": "^2.0.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-swipeable-views": "^0.13.1",
